--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,33 @@
 version: '3.7'
 
-networks:
-  LEMP:
-
 services:
   nginx:
-    image: nginx
+    image: nginx:latest
     container_name: LEMP_nginx
     restart: always
-    ports:
-      - 9191:80
-    links:
-      - php
     volumes:
+      - './log/nginx/:/var/log/nginx/'
       - './etc/nginx/default.template.conf:/etc/nginx/conf.d/default.template'
       - './etc/nginx/default.conf:/etc/nginx/conf.d/default.conf'
       - './src:/var/www/html'
     command: /bin/sh -c "nginx -g 'daemon off;'"
-    restart: always
     depends_on:
       - php
-    networks:
-      - LEMP
+    links:
+      - php
+    ports:
+      - 80:80
 
   phpmyadmin:
-      image: phpmyadmin/phpmyadmin
-      container_name: LEMP_phpmyadmin
-      restart: always
-      environment:
-        PMA_HOST: LEMP_mysql
-      ports:
-        - '9192:80'
-      links:
-        - database
-      networks:
-      - LEMP
+    image: phpmyadmin/phpmyadmin
+    container_name: LEMP_phpmyadmin
+    restart: always
+    environment:
+      PMA_HOST: LEMP_mysql
+    links:
+      - database
+    ports:
+      - 9192:80
 
   database:
     image: mysql:5.7
@@ -42,23 +35,21 @@ services:
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
       MYSQL_ROOT_PASSWORD: 'toor'
-    ports:
-      - '9193:3306'
     volumes:
-      - './etc/db:/var/lib/mysql'
-    networks:
-      - LEMP
+      - './docker/db:/var/lib/mysql'
+      - './log/mysql/:/var/log/mysql/'
+    ports:
+      - 9193:3306
 
   php:
-    image: nanoninja/php-fpm
+    build: ./docker/php
     container_name: LEMP_php
     restart: always
-    ports:
-      - '9194:9000'
+    environment:
+      XDEBUG_CONFIG: remote_host=host.docker.internal remote_port=9000 remote_enable=0
     volumes:
       - './src:/var/www/html'
-      - './etc/php/php.ini:/usr/local/etc/php/conf.d/php.ini'
-    networks:
-      - LEMP
     links:
       - database
+    ports:
+      - 9194:9000
