--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,12 @@
 version: '3.7'
 
 services:
-  nginx:
-    image: nginx:latest
-    container_name: LEMP_nginx
-    restart: always
-    volumes:
-      - './log/nginx/:/var/log/nginx/'
-      - './etc/nginx/default.template.conf:/etc/nginx/conf.d/default.template'
-      - './etc/nginx/default.conf:/etc/nginx/conf.d/default.conf'
-      - './src:/var/www/html'
-    command: /bin/sh -c "nginx -g 'daemon off;'"
-    depends_on:
-      - php
-    links:
-      - php
-    ports:
-      - 80:80
-
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
-    container_name: LEMP_phpmyadmin
+    container_name: LAMP74_phpmyadmin
     restart: always
     environment:
-      PMA_HOST: LEMP_mysql
+      PMA_HOST: LAMP74_mysql
     links:
       - database
     ports:
@@ -31,7 +14,7 @@ services:
 
   database:
     image: mysql:5.7
-    container_name: LEMP_mysql
+    container_name: LAMP74_mysql
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
       MYSQL_ROOT_PASSWORD: 'toor'
@@ -43,13 +26,14 @@ services:
 
   php:
     build: ./docker/php
-    container_name: LEMP_php
+    container_name: LAMP74_php
     restart: always
     environment:
       XDEBUG_CONFIG: remote_host=host.docker.internal remote_port=9000 remote_enable=0
     volumes:
       - './src:/var/www/html'
+      - './log/nginx/:/var/log/apache2/'
     links:
       - database
     ports:
-      - 9194:9000
+      - 80:80
